# papyr

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  shell.nix
.github/workflows/: ci.yml  publish.yml  release.yml
assets/: code-theme.tmTheme  style.css
docs/superpowers/specs/: 2026-06-29-live-reload-design.md  2026-06-29-oss-readiness-design.md
lib/: template.typ
scaffold/: about.typ  config.yaml  gitignore  hello-papyr.typ  imprint.typ
src/: build.rs  code.rs  dates.rs  feed.rs  head.rs  links.rs  main.rs  model.rs  render.rs  scaffold.rs  serve.rs  text.rs  toc.rs  world.rs
tests/: build_site.rs
