[package]
name = "papyr"
version = "0.1.0"
edition = "2021"
description = "A minimal, Typst-powered static blog generator"
license = "MIT OR Apache-2.0"

[[bin]]
name = "papyr"
path = "src/main.rs"

[dependencies]
typst = "=0.15.0"
typst-html = "=0.15.0"
typst-kit = { version = "=0.15.0", features = [
    "embedded-fonts",
    "emit-diagnostics",
    "system-packages",
] }
comemo = "0.4"
ecow = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }

# serve + watch
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["fs", "trace"] }
notify = "8"

# package downloads (Typst Universe), rustls-based to avoid an openssl dep
ureq = "3"

# logging (verbose mode)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
